Fix adjust_src_dst_region_for_blitframebuffer for depth-only framebuffers

Bug: 731877
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I37f09a2bdbe4466cadd640abf76cacedaf364f31