gpu/command_buffer/service/framebuffer_manager.h
@@ -133,6 +133,9 @@ class GPU_EXPORT Framebuffer : public base::RefCounted<Framebuffer> {
 
   const Attachment* GetReadBufferAttachment() const;
 
+  // Returns the max dimensions which fit inside all of the attachments.
+  gfx::Size GetFramebufferValidSize() const;
+
   GLsizei GetSamples() const;
 
   bool IsDeleted() const {
@@ -345,7 +348,7 @@ class GPU_EXPORT FramebufferManager {
 
   void MarkAsComplete(Framebuffer* framebuffer);
 
-  bool IsComplete(Framebuffer* framebuffer);
+  bool IsComplete(const Framebuffer* framebuffer);
 
   void IncFramebufferStateChangeCount() {
     // make sure this is never 0.
